--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 include:
   remote: "https://github.com/git-developer/docker-support/raw/v3.2.0/gitlab-ci/docker-template.yml"
 
+variables:
+  IMAGE_PLATFORMS: linux/amd64,linux/i386,linux/arm64,linux/arm/v7,linux/arm/v6
+
 read_application_tags:
   stage: post_checkout
   image: busybox
