--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 include:
-  remote: "https://github.com/git-developer/docker-support/raw/v3.2.0/gitlab-ci/docker-template.yml"
+  remote: "https://github.com/git-developer/docker-support/raw/v3.3.1/gitlab-ci/docker-template.yml"
 
 variables:
   IMAGE_PLATFORMS: linux/amd64,linux/i386,linux/arm64,linux/arm/v7,linux/arm/v6
+  IMAGE_VERSION: "legacy-latest"
 
 read_application_tags:
   stage: post_checkout
@@ -12,4 +13,4 @@ read_application_tags:
     - tags
   script:
   - mkdir -p tags
-  - echo >tags/build-date "${CI_PROJECT_PATH}:$(date --utc -I)"
+  - echo >tags/build-date "${CI_PROJECT_PATH}:legacy-$(date --utc -I)"
