chore: harden image for security and add attestations

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,10 +1,16 @@
-FROM alpine
-ARG REPO_URL=git+https://github.com/JelmerT/cc2538-bsl#egg=cc2538-bsl[default,intelhex]
+FROM python:3-alpine
+ARG REPO_URL='cc2538-bsl[default,intelhex] @ git+https://github.com/JelmerT/cc2538-bsl'
 # sed is used as post-checkout hook to fix `setup.py`, see https://github.com/JelmerT/cc2538-bsl/pull/143
-RUN apk add --no-cache python3 file pipx git && \
-    printf %s 'sed -i "' "s/'':/'default':/" '" setup.py' | install /dev/stdin /usr/share/git-core/templates/hooks/post-checkout && \
-    PIPX_HOME=/opt/pipx PIPX_BIN_DIR=/usr/local/bin pipx install "${REPO_URL}" && \
-    apk del --no-cache git pipx
+RUN apk add --no-cache file git && \
+    printf %s 'sed -i "' "s/'':/'default':/" '" setup.py' \
+      | install -D /dev/stdin /usr/share/git-core/templates/hooks/post-checkout && \
+    export PIP_ROOT_USER_ACTION=ignore && \
+    pip3 install "${REPO_URL}" && \
+    pip3 uninstall -y setuptools wheel pip && \
+    apk del --no-cache -r git && \
+    rm -r /root/.cache
+RUN adduser -D user && addgroup user dialout
+USER user
 ADD run /usr/local/bin/
 WORKDIR /tmp
 ENTRYPOINT ["run"]
