chore: remove workaround for empty extras_require key
Fixed by https://github.com/JelmerT/cc2538-bsl/pull/159
Relates https://github.com/JelmerT/cc2538-bsl/pull/143

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,9 +1,6 @@
 FROM python:3-alpine
-ARG REPO_URL='cc2538-bsl[default,intelhex] @ git+https://github.com/JelmerT/cc2538-bsl'
-# sed is used as post-checkout hook to fix `setup.py`, see https://github.com/JelmerT/cc2538-bsl/pull/143
+ARG REPO_URL='cc2538-bsl[cc2538-bsl,intelhex] @ git+https://github.com/JelmerT/cc2538-bsl'
 RUN apk add --no-cache file git && \
-    printf %s 'sed -i "' "s/'':/'default':/" '" setup.py' \
-      | install -D /dev/stdin /usr/share/git-core/templates/hooks/post-checkout && \
     export PIP_ROOT_USER_ACTION=ignore && \
     pip3 install "${REPO_URL}" && \
     pip3 uninstall -y setuptools wheel pip && \
