fix: remove int type from port arg

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3-alpine
 ARG REPO_URL='cc2538-bsl[cc2538-bsl,intelhex] @ git+https://github.com/JelmerT/cc2538-bsl'
 RUN apk add --no-cache file git && \
+    printf %s 'sed -i "' "s/'--port', type=int,/'--port',/" '" cc2538-bsl.py' \
+      | install -D /dev/stdin /usr/share/git-core/templates/hooks/post-checkout && \
     export PIP_ROOT_USER_ACTION=ignore && \
     pip3 install "${REPO_URL}" && \
     pip3 uninstall -y setuptools wheel pip && \
