fix: check force_speed by absence of property

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3-alpine
 ARG REPO_URL='cc2538-bsl[cc2538-bsl,intelhex] @ git+https://github.com/JelmerT/cc2538-bsl'
 RUN apk add --no-cache file git && \
-    printf %s 'sed -i "' "s/'--port', type=int,/'--port',/" '" cc2538-bsl.py' \
+    printf %s 'sed -i -e "' \
+              "s/'--port', type=int,/'--port',/" \
+              '" -e "s/args.force_speed != 1/not args.force_speed/" cc2538-bsl.py' \
       | install -D /dev/stdin /usr/share/git-core/templates/hooks/post-checkout && \
     export PIP_ROOT_USER_ACTION=ignore && \
     pip3 install "${REPO_URL}" && \
