--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3-alpine
 ARG REPO_URL='cc2538-bsl[cc2538-bsl,intelhex] @ git+https://github.com/JelmerT/cc2538-bsl'
 RUN apk add --no-cache file git && \
     printf %s 'sed -i -e "' \
-              "s/'--port', type=int,/'--port',/" \
-              '" -e "s/args.force_speed != 1/not args.force_speed/" cc2538-bsl.py' \
+              "s/if args.ieee_address != 0/if args.ieee_address/" \
+              '" cc2538-bsl.py' \
       | install -D /dev/stdin /usr/share/git-core/templates/hooks/post-checkout && \
     export PIP_ROOT_USER_ACTION=ignore && \
     pip3 install "${REPO_URL}" && \
